# Veridex

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  test_approval.py
backend/alembic/: env.py
backend/alembic/versions/: e93e76c6cf50_add_oauth_accounts.py  f543dc9ff8ba_initial_schema.py
backend/app/: main.py
backend/app/ai/: config.py  events.py  router.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  gateway.py  logging.py  middleware.py  security.py
backend/app/db/: multitenant.py  session.py
backend/app/evaluations/: llm_judge.py
backend/app/governance/: audit.py  engine.py  retention.py
backend/app/plugins/: loader.py
backend/app/schemas/: common.py  user.py
backend/app/security/: encryption.py  secrets.py
backend/app/services/: policy_service.py
backend/app/workers/: celery_app.py
backend/config/: models.yaml  providers.yaml  routing.yaml  tools.yaml
backend/scripts/: seed_db.py  seed_graph.py  test_planner.py  verify_github_connector.py  verify_github_oauth.py  verify_gmail_connector.py  verify_google_oauth.py  verify_jira_connector.py  verify_minio.py  verify_neo4j_graph.py  verify_notion_connector.py  verify_openai.py  verify_postgres.py  verify_qdrant_pipeline.py  verify_redis.py  verify_slack_connector.py
backend/test_docs/: intro.txt
backend/tests/: conftest.py  test_evaluations.py  test_governance.py  test_ingestion_fs.py  test_ingestion_github.py  test_orchestrator.py
sdk/python/: README.md  pyproject.toml
(+193 files in other folders)
