[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "minio>=7.2.20",
    "neo4j>=6.2.0",
    "openai>=1.59.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
