[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veridex"
version = "0.1.0"
description = "Veridex SDK and CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "click>=8.1.7"
]

[project.scripts]
veridex = "veridex.cli:cli"
